--- a/app/src/main/res/layout/content_edit_movie.xml
+++ b/app/src/main/res/layout/content_edit_movie.xml
@@ -42,12 +42,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/mm_dd_yyyy"
+            android:hint="@string/date_seen"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:inputType="date" />
+            android:inputType="date"
+            android:focusable="false"/>
 
     </android.support.design.widget.TextInputLayout>
 
