--- a/app/src/main/res/layout/fragment_top_rated_list.xml
+++ b/app/src/main/res/layout/fragment_top_rated_list.xml
@@ -1,11 +1,9 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/topRatedRecyclerView"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.fullerton.justin.mymoviereviews.view.MostRecentListFragment"
     tools:listitem="@layout/movielist_item">
-
-    <!-- TODO: Update blank fragment layout -->
-
 
 </android.support.v7.widget.RecyclerView>
