--- a/app/src/main/res/layout/content_edit_movie.xml
+++ b/app/src/main/res/layout/content_edit_movie.xml
@@ -13,9 +13,9 @@
         android:id="@+id/movieNameInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,7 +24,10 @@
             android:id="@+id/movie_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/movie_name_hint" />
+            android:hint="@string/movie_name_hint"
+            android:transitionName="@string/transitionMovieName"
+            android:background="@android:color/transparent"
+            />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -41,14 +44,17 @@
             android:id="@+id/movie_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/date_seen"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:ems="10"
+            android:focusable="false"
+            android:hint="@string/date_seen"
             android:inputType="date"
-            android:focusable="false"/>
+            android:transitionName="@string/transitionMovieDate"
+            android:background="@android:color/transparent"
+            />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -60,6 +66,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:transitionName="@string/transitionMovieRating"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/movieDateInputLayout" />
